# Fluxara

./: .gitignore  Engineering's Hardest Problem_2026-06-10 01_19_10.md  README.md  generate_acceptance_report.py  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
.meta-harness/: events.jsonl  status.md
.meta-harness/workers/: worker-report-template.md
artifacts/: benchmarks.md  fluxara_external_audit_bundle_v0.4.1.zip.sha256  r8_3_crossover_surface.csv  r8_3_falsification_benchmarks.md  r8_acceptance_report.json  release_manifest_v0.4.1_repro_alpha.json  release_manifest_v0.4_research_alpha.json  release_tag_refs.json
docs/: ARCHITECTURE.md  R8_1_MARKET_SECURITY.md  R8_2_AGING_AWARE_ROUTING.md  R8_3_RESEARCH_PLAN.md  R8_4_REPRODUCIBILITY.md  ROADMAP_R8.md  WHITEPAPER.md
docs/product/: decision-log.md  prd.md  product-spec.md
fluxara_core/: __init__.py  demo.py  env.py  solver.py
fluxara_core/bidding/: __init__.py  adversary.py  bid_policy.py  exploitability.py
fluxara_core/hardware/: __init__.py  aging_aware_placer.py  health_map.py  op_sensitivity.py
gemini/: AI-Data-Centers-Software-Control-Focus.md
schemas/: r8_3_crossover_surface.schema.json  r8_acceptance_report.schema.json  release_manifest.schema.json
scripts/: check_release_manifest.py  export_audit_bundle.py  replay_acceptance.py  verify_audit_bundle.py
tests/: test_adversarial_benchmark.py  test_bidding_policy.py  test_cvar_monte_carlo.py  test_demo.py  test_env.py  test_landauer_toy.py  test_placer.py  test_research_isolation.py  test_solver.py
(+4 files in other folders)
